styles/default.css
/* ... */
#top .menu .login-link {
    cursor: pointer;
    line-height: 20px;
}
#top .notifications {
    position: absolute;
    z-index: 25;
    right: 10px;
    top: 10px;
    min-width: 200px;
}
#top .notifications li {
    position: relative;
    width: 228px;
    max-width: 228px;
    min-height: 32px;
    padding: 20px 20px 20px 52px;
    margin-bottom: 15px;
    border-radius: 10px;
    background: rgba(0,0,0,0.8);
    background-image: url('/images/logo/logo_32x32.png');
    background-repeat: no-repeat;
    background-position: 10px 20px;
    color: white;
    font-weight: bold;
    -moz-transition: all 1s ease-in-out;
    -webkit-transition: all 1s ease-in-out;
    -o-transition: all 1s ease-in-out;
    -ms-transition: all 1s ease-in-out;
    transition: all 1s ease-in-out;
}
#top .notifications li:last-of-type {
    margin-bottom: 0px;
}
#top .notifications li.hidden {
    opacity: 0;
}
#top .notifications li .close {
    display: none;
    position: absolute;
    top: 3px;
    right: 10px;
    cursor: pointer;
}
#top .notifications li:hover .close {
    display: block;
}

/** LEFT
 ****************************************************************************/

.left-wrapper {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: absolute;
    top: 0;
    z-index: 5;
    width: 320px;
    height: 100%;
    padding: 50px 0 70px 0; /* #top, 0, #bottom, 0 */
}
#left {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    width: 320px;
    height: 100%;
    padding-bottom: 200px; /* #.players.height */
}
#left .menu {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    height: 100%;
    font-size: 14px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    padding: 10px 5px 5px 5px;
    overflow-y: auto;
}
#left .menu li:hover {
    color: #000;
}
#left .menu li.selected:hover {
    color: #FFF;
}
#left .menu .external-user-subscriptions img,
#left .menu .playlists li.subscription .owner {
    position: absolute;
    left: 5px;
    top: 10px;
    width: 16px;
    height: 16px;
}
#left .menu .home, 
#left .menu .queue,
#left .menu .playlists li ,
#left .menu .external-user-subscriptions li,
#left .menu .playlists li.subscription {
    cursor: pointer;
    padding: 8px 8px 8px 25px;
    position: relative;
}
#left .menu .home:before {
    content: 'ï';
    font-family: YoutifyRegular;
    font-size: 32px;
    line-height: 20px;
    color: #000;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    position: absolute;
    top: -2px;
    left: 4px;
}
#left .menu .queue:before {
    content: 'j';
    font-family: YoutifyRegular;
    font-size: 32px;
    line-height: 20px;
    color: #000;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    position: absolute;
    top: -1px;
    left: 4px;
}
#left .menu .group .loading-animation {
    text-align: left;
    padding: 5px;
}
#left .menu .playlists li:before {
    content: 'i';
    font-family: YoutifyRegular;
    font-size: 40px;
    line-height: 20px;
    color: #000;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    position: absolute;
    top: -3px;
    left: 3px;
}

#left .menu .selected.home:before,
#left .menu .selected.queue:before,
#left .menu .selected.search:before,
#left .menu .playlists li.selected:before {
    color: #FFF;
    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
}

#left .menu li.playing:after {
    content: '3';
    font-family: YoutifyRegular;
    font-size: 60px;
    line-height: 20px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    position: absolute;
    top: -10px;
    right: 10px;
    color: #333;
}
#left .menu li.playing.selected:after {
    color: #FFF;
    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
}
#left .menu li.target {
    background-color: rgb(62, 126, 221);
    color: white;
    text-shadow: none;
    cursor: default;
}
#left .menu .playlists .new {
    position: relative;
    margin: 10px 0px 5px 0px;
    display: block;
}
#left .menu .playlists .new span {
    cursor: pointer;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    display: inline-block;
    padding: 2px;
    width: 100%;
    height: 100%;
}
#left .menu .playlists .new input[type=text] {
    font-size: 12px;
    display: inline-block;
    padding: 2px 2px 1px 2px;
    width: 90%;
    height: 100%;
}
#left .players,
#left .players .soundcloud,
#left .players .officialfm,
#left .players .youtube {
    width: 320px;
    height: 200px;
    background: #000;
    position: absolute;
    z-index: 30;
}
#left .players .soundcloud,
#left .players .officialfm {
    background-repeat: no-repeat;
    background-position: center center;
    -webkit-background-size: contain;
	-moz-background-size: contain;
	-o-background-size: contain;
	background-size: contain;
}

/** RIGHT
 ****************************************************************************/
 
.right-wrapper {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    padding: 50px 0 70px 320px; /* #top, 0, #bottom, #leftcolumn */
}
#right {
    width: 100%;
    height: 100%;
    overflow: hidden;
}
#right > div {
    display: none;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: 10px 5px 0 5px;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
}
#right .tabs {
    position: relative;
    overflow: hidden;
    margin-bottom: 10px;
    word-spacing: 0;
}
/* ... */

